--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,18 @@
+html,
+body {
+  min-width: 1122px;
+  margin: 0;
+  padding: 0;
+
+}
+
 body {
   font-size: 14px;
   line-height: 24px;
   color: #000000;
   font-weight: bold;
-  font-family: "PT Sans Narrow", "Arial", serif;
+  font-family: "PT Sans Narrow", "Arial", sans-serif;
+  background-color: #f9f6f3;
 }
 
 h1 {
@@ -11,7 +20,7 @@ h1 {
   line-height: 42px;
   color: #000000;
   font-weight: bold;
-  font-family: "PT Sans Narrow", "Arial", serif;
+  font-family: "PT Sans Narrow", "Arial", sans-serif;
 }
 
 h2 {
@@ -19,5 +28,190 @@ h2 {
   line-height: 30px;
   color: #000000;
   font-weight: bold;
-  font-family: "PT Sans Narrow", "Arial", serif;
+  font-family: "PT Sans Narrow", "Arial", sans-serif;
+}
+
+.clearfix::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.container {
+  width: 940px;
+  margin: 0 auto;
+  padding: 0 10px;
+}
+
+.main-header {
+  margin-bottom: 60px;
+}
+
+.header-logo {
+  float: left;
+  width: 150px;
+  margin-right: 10px;
+  min-height: 70px;
+}
+
+.main-navigation {
+  float: left;
+  width: 780px;
+  min-height: 70px;
+}
+
+.sub-header {
+  margin-bottom: 55px;
+}
+
+.sub-navigation {
+  float: left;
+  width: 800px;
+  min-height: 70px;
+}
+
+.user-block {
+  float: right;
+  width: 140px;
+  min-height: 70px;
+}
+
+.index-logo {
+  width: 368px;
+  min-height: 204px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 25px;
+}
+
+.breadcrumbs {
+  margin-top: 25px;
+  margin-bottom: 55px;
+}
+
+.item {
+  float: left;
+  width: 460px;
+  margin-right: 90px;
+}
+
+.status {
+  float:right;
+  width: 390px;
+}
+
+.header {
+  margin-bottom: 60px;
+  font-size: 48px;
+}
+
+.price-left {
+  float: left;
+  width: 380px;
+  margin-right: 100px;
+}
+
+.price-right {
+  float: right;
+  width: 460px;
+}
+
+.recipe {
+  margin-bottom: 60px;
+}
+
+.price-list {
+  margin-bottom: 120px;
+}
+
+
+.features {
+  margin-bottom: 80px;
+}
+
+.features-item {
+  float: left;
+  width: 300px;
+  min-height: 175px;
+  margin-right: 20px;
+}
+
+.features-item:last-child {
+  margin-right: 0;
+}
+
+.index-content {
+  margin-bottom: 35px;
+  padding: 50px 80px;
+}
+
+.index-content-left {
+  float: left;
+  width: 380px;
+  min-height: 330px;
+}
+
+.index-content-right {
+  float: right;
+  width: 300px;
+  min-height: 330px;
+}
+
+.sort {
+  float:left;
+  width:220px;
+  margin-right: 20px;
+}
+
+.articles {
+  float:right;
+  width:700px;
+  margin-bottom: 45px;
+}
+
+.catalog-item {
+  float:left;
+  width:220px;
+  margin-right: 20px;
+
+}
+
+.catalog-item:nth-child(3n) {
+  margin-right: 0;
+}
+
+.paginator {
+  width:260px;
+  margin-left:240px;
+  margin-bottom: 50px;
+}
+
+.main-footer {
+  margin-top: 65px;
+  padding-top: 60px;
+  padding-bottom: 40px;
+}
+
+.sub-footer {
+  padding-top: 60px;
+  padding-bottom: 40px;
+}
+
+.footer-contacts {
+  float: left;
+  width: 320px;
+  margin-right: 60px;
+  min-height: 90px;
+}
+
+.footer-social {
+  float: left;
+  width: 180px;
+  min-height: 90px;
+}
+
+.footer-copyright {
+  float: right;
+  width: 180px;
+  min-height: 90px;
 }
