--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,50 @@
-html,
 body {
-  min-width: 1122px;
-  margin: 0;
-  padding: 0;
-
-}
-
-body {
+  min-width: 960px;
   font-size: 14px;
   line-height: 24px;
-  color: #000000;
-  font-weight: bold;
+  font-weight: 700;
   font-family: "PT Sans Narrow", "Arial", sans-serif;
   background-color: #f9f6f3;
+  color: #ffffff;
+  text-transform: uppercase;
+  /*background: #000000 url("../img/body-bg.jpg") no-repeat center top;*/
+  background-color: #fbf8f5;
+}
+
+.sprite {
+    background-image: url(../img/sprite.png);
+    background-repeat: no-repeat;
+    display: block;
+}
+
+.sprite-cross {
+    width: 12px;
+    height: 12px;
+    background-position: -10px -10px;
+}
+
+.sprite-f {
+    width: 12px;
+    height: 22px;
+    background-position: -10px -42px;
+}
+
+.sprite-i {
+    width: 21px;
+    height: 21px;
+    background-position: -10px -84px;
+}
+
+.sprite-login {
+    width: 18px;
+    height: 16px;
+    background-position: -10px -125px;
+}
+
+.sprite-v {
+    width: 25px;
+    height: 16px;
+    background-position: -10px -161px;
 }
 
 h1 {
@@ -45,6 +77,8 @@ h2 {
 
 .main-header {
   margin-bottom: 60px;
+  color: #ffffff;
+  background-color: #000000;
 }
 
 .header-logo {
@@ -52,6 +86,8 @@ h2 {
   width: 150px;
   margin-right: 10px;
   min-height: 70px;
+  position: relative;
+  top: 25px;
 }
 
 .main-navigation {
@@ -60,33 +96,123 @@ h2 {
   min-height: 70px;
 }
 
-.sub-header {
-  margin-bottom: 55px;
+.main-navigation ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  font-size: 0;
 }
 
-.sub-navigation {
-  float: left;
-  width: 800px;
-  min-height: 70px;
+.main-navigation li {
+  display: inline-block;
+  font-size: 16px;
+  line-height: 20px;
+  vertical-align: top;
+}
+
+.main-navigation a {
+  display: block;
+  padding: 25px 20px;
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.main-navigation a:hover {
+  background: #242424;
 }
 
 .user-block {
   float: right;
-  width: 140px;
+  max-width: 140px;
   min-height: 70px;
+}
+
+.login {
+  position: relative;
+  display: inline-block;
+  padding: 25px 20px;
+  padding-left: 50px;
+  font-size: 16px;
+  line-height: 20px;
+  vertical-align: top;
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.login:hover {
+  background-color: #242424;
+}
+
+.login::before {
+  content: "";
+  position: absolute;
+  top: 28px;
+  left: 20px;
+  width: 18px;
+  height: 18px;
+  background: transparent url("../img/sprite.png") no-repeat;
+  background-position: -10px -125px;
+  opacity: 0.3;
+}
+
+.login:hover::before {
+  opacity: 1;
 }
 
 .index-logo {
   width: 368px;
-  min-height: 204px;
+  height: 204px;
   margin-right: auto;
   margin-left: auto;
   margin-bottom: 25px;
 }
 
+.index-logo img {
+  width: 368px;
+  height: 204px;
+}
+
 .breadcrumbs {
+  position: relative;
+  display: block;
   margin-top: 25px;
   margin-bottom: 55px;
+}
+
+.breadcrumbs ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  font-size: 0;
+}
+
+.breadcrumbs li {
+  display: inline-block;
+  font-size: 16px;
+  line-height: 20px;
+  vertical-align: top;
+}
+
+.breadcrumbs a {
+  display: block;
+  padding-right: 30px;
+  text-decoration: none;
+}
+
+.breadcrumbs a:last-child {
+  color: #aba9a7;
+}
+
+.breadcrumbs a::after {
+  content: "";
+  position: absolute;
+  left: 65px;
+  top: 7px;
+  display: block;
+  width: 8px;
+  height: 8px;
+  background-color: #000000;
+  transform: rotate(45deg);
 }
 
 .item {
@@ -132,17 +258,48 @@ h2 {
 .features-item {
   float: left;
   width: 300px;
-  min-height: 175px;
   margin-right: 20px;
+  text-align: center;
 }
 
 .features-item:last-child {
   margin-right: 0;
 }
 
+.features-name {
+  position: relative;
+  display: block;
+  margin-bottom: 30px;
+  padding-bottom: 35px;
+  font-size: 30px;
+  line-height: 42px;
+}
+
+.features-item p {
+  margin: 10px;
+  margin-bottom: 0;
+}
+
+.features-name::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  display: block;
+  width: 20px;
+  height: 20px;
+  margin-left: -10px;
+  background-color: #ffffff;
+  transform: rotate(45deg);
+}
+
 .index-content {
   margin-bottom: 35px;
   padding: 50px 80px;
+  color: #000000;
+  background: url("../img/index-content-shadow.png") no-repeat center,
+  #f8f5f2 url("../img/pattern-white.jpg");
+
 }
 
 .index-content-left {
@@ -157,10 +314,213 @@ h2 {
   min-height: 330px;
 }
 
+.index-content-title {
+  margin: 0;
+  margin-bottom: 25px;
+  font-size: 30px;
+  line-height: 42px;
+}
+
+.index-content p {
+  margin: 0;
+  margin-bottom: 25px;
+}
+
+.news-preview {
+  margin: 0;
+  padding: 0;
+  padding-right: 35px;
+  list-style: none;
+}
+
+.news-preview li {
+  margin-bottom: 25px;
+}
+
+.news-preview p {
+  margin-bottom: 0;
+}
+
+.news-preview time {
+  text-transform: none;
+}
+
+.btn {
+  display: inline-block;
+  margin-right: 16px;
+  padding: 10px 33px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 24px;
+  font-family: "PT Sans Narrow", "Arial", sans-serif;
+  vertical-align: top;
+  text-align: center;
+  color: #ffffff;
+  text-transform: uppercase;
+  text-decoration: none;
+  background-color: #000000;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.btn:hover,
+.btn:active {
+  background-color: #663d15;
+}
+
+.btn.disabled,
+.btn:disabled {
+  cursor: default;
+  opacity: 0.5;
+}
+
+.btn.disabled:hover,
+.btn:disabled:hover {
+  background-color: #000000;
+}
+
+.gallery {
+  position: relative;
+  height: 260px;
+}
+
+.gallery-content {
+  height: 164px;
+  margin: 0;
+  background-color: #cccccc;
+  border: 7px solid #ffffff;
+}
+
+.gallery-content img {
+  width: 286px;
+  height: 164px;
+}
+
+.gallery .btn {
+  position: absolute;
+  bottom: 0;
+  width: 140px;
+  margin: 0;
+}
+
+.gallery-prev {
+  left: 0;
+}
+
+.gallery-next {
+  right: 0;
+}
+
+.appointment-form input {
+  float: left;
+  width: 106px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  padding: 7px 15px;
+  font-size: 14px;
+  line-height: 24px;
+  font-family: "PT Sans Narrow", "Arial", sans-serif;
+  color: #000000;
+  text-transform: uppercase;
+  background-color: #f9f6f3;
+  border: 2px solid #000000;
+  outline: none;
+}
+
+.appointment-form input:focus {
+  border: 2px solid #663d15;
+}
+
+.appointment-form input:nth-child(2n) {
+  margin-right: 0;
+}
+
+.appointment-form .btn {
+  clear: both;
+  width: 100%;
+}
+
 .sort {
   float:left;
-  width:220px;
-  margin-right: 20px;
+  width:200px;
+  margin-right: 0px;
+  color: #000000;
+}
+
+input[type="checkbox"],
+input[type="radio"] {
+  display: none;
+}
+
+input[type="checkbox"] + label {
+  display: block;
+  margin: 10px 0;
+  line-height: 20px;
+  padding-left: 25px;
+  position: relative;
+  cursor: pointer;
+}
+
+label input[type="radio"] {
+  display: block;
+  margin: 10px 0;
+  line-height: 40px;
+  padding-left: 45px;
+  position: relative;
+  cursor: pointer;
+}
+
+label input[type="radio"]::before {
+  content: "";
+  width: 16px;
+  height: 16px;
+  border: 2px solid #000000;
+  border-radius: 50%;
+  background-color: #f9f6f3;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+label input[type="radio"]:checked::after {
+  content: "";
+  position: absolute;
+  top: 6px;
+  left: 6px;
+  width: 8px;
+  height: 8px;
+  background-color: #000000;
+  border-radius: 50%;
+
+}
+
+input[type="checkbox"] + label::before {
+  content: "";
+  width: 16px;
+  height: 16px;
+  border: 2px solid #000000;
+  background-color: #f9f6f3;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+input[type="checkbox"]:checked + label::after {
+  content: "";
+  position: absolute;
+  top: 4px;
+  left: 4px;
+  background-image: url(../img/sprite.png);
+  background-repeat: no-repeat;
+  width: 12px;
+  height: 12px;
+  background-position: -10px -10px;
+}
+
+.catalog-row {
+  float:right;
+  width: 700px;
 }
 
 .articles {
@@ -173,11 +533,22 @@ h2 {
   float:left;
   width:220px;
   margin-right: 20px;
-
+  background-color: #ffffff;
+  box-shadow: 0 -4px 5px 1px #eae8e5;
 }
 
 .catalog-item:nth-child(3n) {
   margin-right: 0;
+}
+
+.catalog-item a {
+  text-decoration: none;
+}
+
+.catalog-item b {
+  color: #000000;
+  background-color: #e5e5e5;
+  padding: 16px 30px;
 }
 
 .paginator {
@@ -186,15 +557,52 @@ h2 {
   margin-bottom: 50px;
 }
 
+.paginator a {
+    display: inline-block;
+    min-width: 23px;
+    height: 43px;
+    padding: 0 15px;
+    color: #ffffff;
+    background: #000000;
+    line-height: 43px;
+    text-decoration: none;
+    text-align: center;
+    vertical-align: middle;
+    font-weight: bold;
+    margin-right: 4px;
+}
+
+.paginator .current {
+  color: #000000;
+  background: #ffffff;
+}
+
+.recipe, .summary, .price-list {
+  color: #000000;
+}
+
+.price-list {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.price-list td {
+    border: 2px solid #000000;
+    padding: 15px;
+    width: 230px;
+  }
+
+.price-list .price-number {
+  text-align: center;
+
+}
+
 .main-footer {
   margin-top: 65px;
   padding-top: 60px;
   padding-bottom: 40px;
-}
-
-.sub-footer {
-  padding-top: 60px;
-  padding-bottom: 40px;
+  color: #ffffff; /* лучше явно прописать везде для футера */
+  background: #252525 url("img/pattern-black.jpg");
 }
 
 .footer-contacts {
@@ -204,14 +612,83 @@ h2 {
   min-height: 90px;
 }
 
+.footer-contacts a {
+  color: #ffffff;
+}
+
+.footer-contacts a:hover {
+  text-decoration: none;
+}
+
 .footer-social {
   float: left;
   width: 180px;
-  min-height: 90px;
+  text-align: center;
 }
 
 .footer-copyright {
   float: right;
-  width: 180px;
-  min-height: 90px;
+  max-width: 180px;
+}
+
+.footer-social p {
+  margin: 0;
+  margin-bottom: 15px;
+}
+
+.social-btn {
+  display: inline-block;
+  width: 43px;
+  height: 43px;
+  margin: 0 2px;
+  font-size: 0;
+  vertical-align: top;
+  text-decoration: none;
+  background: #000000 url("../img/sprite.png") no-repeat center;
+  transition:
+  background-position 0.5s,
+  background-color 0.5s;
+}
+
+.social-btn:hover {
+  background-color: #ffffff;
+}
+
+.social-btn-vk {
+  background-position: 0 -150px;
+}
+
+.social-btn-fb {
+  background-position: 5px -33px;
+}
+
+.social-btn-inst {
+  background-position: 0 -77px;
+}
+
+.social-btn-vk:hover {
+  background-position: 9px -381px;
+}
+
+.social-btn-fb:hover {
+  background-position: 15px -100px;
+}
+
+.social-btn-inst:hover {
+  background-position: 12px -242px;
+}
+
+.footer-copyright p {
+  margin: 0;
+  margin-bottom: 15px;
+  text-align: center;
+}
+
+.footer-copyright .btn {
+  margin-right: 0;
+}
+
+.footer-copyright .btn:hover {
+  color: #000000;
+  background-color: #ffffff;
 }
