--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,8 @@ body {
   background-color: #fbf8f5;
 }
 
+
+
 .sprite {
     background-image: url(../img/sprite.png);
     background-repeat: no-repeat;
@@ -115,10 +117,30 @@ h2 {
   padding: 25px 20px;
   color: #ffffff;
   text-decoration: none;
+
 }
 
 .main-navigation a:hover {
   background: #242424;
+}
+
+.main-navigation .indicator:hover {
+  background-color: #000000;
+}
+
+.main-navigation .indicator {
+  position: relative;
+}
+
+.main-navigation .indicator::after {
+  position: absolute;
+  content: "";
+  top: 68px;
+  left: 20px;
+  height: 4px;
+  width: 57px;
+  background-color: #ffffff;
+  color: #ffffff;
 }
 
 .user-block {
@@ -476,6 +498,21 @@ input[type="radio"] + label {
   cursor: pointer;
 }
 
+input + label:hover {
+  color: #663d15;
+}
+
+input:disabled + label {
+  color: #adaba9;
+}
+
+input[type="radio"]:disabled + label::before {
+  color: #adaba9;
+  border: 2px solid #adaba9;
+  border-radius: 50%;
+  background-color: #f9f6f3;
+}
+
 input[type="radio"] + label::before {
   content: "";
   width: 16px;
@@ -497,7 +534,6 @@ input[type="radio"]:checked + label::after {
   height: 8px;
   background-color: #000000;
   border-radius: 50%;
-
 }
 
 input[type="checkbox"] + label::before {
@@ -526,6 +562,7 @@ input[type="checkbox"]:checked + label::after {
 .catalog-row {
   float: right;
   width: 700px;
+  margin-bottom: 20px;
 }
 
 .articles {
@@ -549,17 +586,19 @@ input[type="checkbox"]:checked + label::after {
 .catalog-item a {
   text-decoration: none;
   text-transform: none;
-
 }
 
 .catalog-item b {
   color: #000000;
   background-color: #e5e5e5;
-  padding: 16px 30px;
+  padding: 10px 25px;
+  line-height: 24px;
 }
 
 .catalog-price b {
   float: left;
+  width: 58px;
+  text-align: center;
 }
 
 .catalog-price a {
@@ -568,11 +607,24 @@ input[type="checkbox"]:checked + label::after {
 
 .item-link span {
   text-transform: uppercase;
+  line-height: 18px;
 }
 
-.item-link {
-
+.item-link,
+.catalog-price  {
   margin-left: 16px;
+  margin-bottom: 16px;
+}
+
+.item-link a {
+  font-size: 14px;
+  line-height: 18px;
+  color: #000000;
+}
+
+.catalog-price .item-btn {
+  text-transform: uppercase;
+  padding: 10px 16px;
 }
 
 .paginator {
@@ -600,6 +652,10 @@ input[type="checkbox"]:checked + label::after {
 .paginator .current {
   color: #000000;
   background: #ffffff;
+}
+
+.paginator-btn:hover {
+  background-color: #663d15;
 }
 
 .recipe, .summary, .price-list {
